Обновил версию спринга, добавил возможность загружать один файл для задания